# minesweeper

./: Cargo.toml  devenv.nix
board_plugin/: Cargo.toml
src/: main.rs
