[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]


[dependencies]
bevy = "0.15.3"
bevy-inspector-egui = { version = "0.30.0", optional = true }
colored = { version = "3.0.0", optional = true }
rand = "0.9.0"
serde = "1.0.219"

